1999-10-26  Alexander Larsson  <alex@cendio.se>

	* app/render_gdk.c (bezier_add_lines):
	Don't crash on zero-size (broken) bezier curves.
	Fixes a crashing bug.

1999-10-25  James Henstridge  <james@daa.com.au>

	* app/Makefile.am (run_dia.sh): allow dia to find internal shape files
	before it is installed.

	* objects/flowchart/flowchart.c: use relative paths to find shapes.

	* objects/custom/custom.c (custom_object_load): take file names
	relative to $(pkgdatadir)/shape-internal, and check an environment
	variable for an alternative directory.

	* app/...: added copyright messages to the top of my new code.

	* app/paginate_psprint.c: some general clean ups.  Also, give an error
	dialog if we can't open the command or output file for writing.

	* app/diapagelayout.c (dia_page_layout_set_orientation): fixed
	function so it would set orientation to landscape correctly.

	* app/paginate_psprint.c: use the paper settings that come with
	the diagram.  Also implemented landscape printing.

	* app/render_eps.c (new_psprint_renderer): use diagram paper metrics
	in PS header.

	* app/commands.[ch] (file_pagesetup_callback): added callback for
	the page setup dialog.

	* app/menus.c: added page setup menu item.

	* app/pagesetup.[ch]: implementation of the page setup dialog.

	* app/diapagelayout.[ch]: added accessors for the scaling factor.
	
	* app/load_save.c (diagram_load): load paper information from save
	file.
	(diagram_save): save the paper info.

	* lib/diagramdata.c (new_diagram_data): initialise paper info section
	of DiagramData structure.
	(diagram_data_destroy): free the paper name.

	* lib/diagramdata.h: added a paper member to the DiagramData structure
	that holds the page layout info for a diagram.

1999-10-21  Alexander Larsson  <alla@lysator.liu.se>

	* objects/flowchart/box.c:
	* objects/flowchart/ellipse.c:
	* objects/flowchart/diamond.c:
	* objects/flowchart/parallelogram.c:
	Load and save padding too. Fixes strange load crashes.
