@@ -138,7 +138,7 @@ new_svg_renderer(Diagram *dia, char *filename)
   Rectangle *extent;
   char *name;
  
-  file = fopen(filename, "w");
+  file = fopen(filename, "wt");
 
   if (file==NULL) {
     message_error(_("Couldn't open: '%s' for writing.\n"), filename);
